@startuml
title Railly Project Class Diagram

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam shadowing false
hide empty members

package "Data Layer" {
  class AppDbContext {
    +DbSet<User> Users
    +DbSet<TrainLine> TrainLines
    +DbSet<Station> Stations
    +DbSet<LineStation> LineStations
    +DbSet<TrainAsset> TrainAssets
    +DbSet<TrainCoach> TrainCoaches
    +DbSet<Camera> Cameras
    +DbSet<Detection> Detections
    +DbSet<UserReport> UserReports
    +DbSet<Incident> Incidents
    +DbSet<AuxiliaryShift> AuxiliaryShifts
    +DbSet<PushSubscription> PushSubscriptions
    +DbSet<NotificationPreference> NotificationPreferences
  }
}

package "Domain Models" {
  enum UserRole {
    Passenger
    Operator
    Auxiliary
  }

  enum UserStatus {
    Active
    Suspended
    Archived
  }

  enum AssetStatus {
    Active
    Inactive
    Maintenance
  }

  enum CoachType {
    Womens_Only
    Mixed
  }

  enum CameraStatus {
    Active
    Inactive
    Faulty
  }

  enum IncidentSource {
    AI_DETECTION
    USER_REPORT
  }

  enum IncidentStatus {
    Pending
    Verified
    En_Route
    Escalated
    Resolved
    Dismissed
  }

  enum SoundAlertMode {
    On
    Off
    Peak
  }

  class User {
    +string UserId
    +string? EmployeeId
    +string UserName
    +string Email
    +string? PasswordHash
    +UserRole Role
    +UserStatus Status
    +DateTime CreatedAt
    +string? MfaSecret
    +bool IsMfaEnabled
  }

  class TrainLine {
    +string LineId
    +string LineName
  }

  class Station {
    +string StationId
    +string StationName
    +decimal? Latitude
    +decimal? Longitude
  }

  class LineStation {
    +string LineId
    +string StationId
    +int SequenceOrder
  }

  class TrainAsset {
    +int TrainId
    +string LineId
    +AssetStatus Status
    +DateTime CreatedAt
  }

  class TrainCoach {
    +int TrainId
    +int? CoachId
    +CoachType CoachType
  }

  class Camera {
    +string CameraId
    +int TrainId
    +int CoachId
    +string StreamUrl
    +CameraStatus Status
  }

  class Detection {
    +int DetectionId
    +string CameraId
    +decimal ConfidenceScore
    +string ImageUrl
    +DateTime DetectedAt
    +string? LineId
    +string? StationId
  }

  class UserReport {
    +int ReportId
    +string UserId
    +int? TrainId
    +int? CoachId
    +string Description
    +string? ImageUrl
    +DateTime CreatedAt
    +string? LineId
    +string? StationId
  }

  class Incident {
    +int IncidentId
    +IncidentSource Source
    +int? DetectionId
    +int? ReportId
    +IncidentStatus Status
    +string? VerifiedBy
    +string? EscalatedBy
    +string? EnrouteBy
    +string? ResolvedBy
    +string? DismissedBy
    +DateTime CreatedAt
    +DateTime? VerifiedAt
    +DateTime? EscalatedAt
    +DateTime? EnrouteAt
    +DateTime? ResolvedAt
    +DateTime? DismissedAt
    +string? VerifiedComment
    +string? EscalatedComment
    +string? EnrouteComment
    +string? ResolvedComment
    +string? DismissedComment
  }

  class AuxiliaryShift {
    +int ShiftId
    +string UserId
    +string StationId
    +DateTime ShiftDate
    +TimeSpan StartTime
    +TimeSpan EndTime
    +DateTime CreatedAt
  }

  class PushSubscription {
    +int Id
    +string UserId
    +string Endpoint
    +string P256DH
    +string Auth
    +DateTime UpdatedAt
  }

  class NotificationPreference {
    +string UserId
    +SoundAlertMode SoundAlerts
    +string TimeFormat
  }
}

package "Services" {
  interface IAlertService {
    +MapToAlertDTO(i: Incident, now: DateTime)
  }

  class AlertService

  interface IS3Service {
    +UploadFileAsync(file, folderName)
    +UploadFileWithKeyAsync(file, key)
    +DeleteFileAsync(fileUrl)
    +GeneratePresignedUrl(key, expiryMinutes)
  }

  class S3Service

  interface IGeminiService {
    +GenerateAsync(prompt, ct)
  }

  class GeminiService

  interface IPushNotificationService {
    +NotifyNewIncident(incidentId)
    +NotifyStatusChange(incidentId)
  }

  class PushNotificationService

  interface ITotpService {
    +VerifyCode(base32Secret, code)
    +GenerateSecret()
    +GetQrCodeUri(email, secret)
  }

  class TotpService

  interface IEmailVerificationSender {
    +SendLoginOtpAsync(email, userName, code)
  }

  class EmailService

  class AuthChallengeStore {
    +Create(userId, ttl, metadata)
    +GetMetadata(challengeId)
    +GetUserId(challengeId)
    +VerifyAndConsume(challengeId, userId, submittedCode)
    +RemoveExpired()
  }

  class TotpUsedCodeCache {
    +TryMarkUsed(base32Secret, code)
  }

  class ChallengeCleanupService
}

package "Controllers" {
  abstract class BaseApiController
  class AuthController
  class PassengerController
  class AuxiliaryController
  class OperatorController
  class NotificationController
  class GeoController
}

package "Realtime" {
  class AlertHub
}

AppDbContext *-- User
AppDbContext *-- TrainLine
AppDbContext *-- Station
AppDbContext *-- LineStation
AppDbContext *-- TrainAsset
AppDbContext *-- TrainCoach
AppDbContext *-- Camera
AppDbContext *-- Detection
AppDbContext *-- UserReport
AppDbContext *-- Incident
AppDbContext *-- AuxiliaryShift
AppDbContext *-- PushSubscription
AppDbContext *-- NotificationPreference

User --> UserRole
User --> UserStatus
TrainAsset --> AssetStatus
TrainCoach --> CoachType
Camera --> CameraStatus
Incident --> IncidentSource
Incident --> IncidentStatus
NotificationPreference --> SoundAlertMode

TrainLine "1" -- "0..*" LineStation
Station "1" -- "0..*" LineStation
TrainLine "1" -- "0..*" TrainAsset
TrainAsset "1" -- "0..*" TrainCoach
TrainCoach "1" -- "0..*" Camera
TrainCoach "1" -- "0..*" UserReport
Camera "1" -- "0..*" Detection
LineStation "1" -- "0..*" Detection
LineStation "1" -- "0..*" UserReport
User "1" -- "0..*" UserReport
User "1" -- "0..*" AuxiliaryShift
Station "1" -- "0..*" AuxiliaryShift
User "1" -- "0..*" PushSubscription
User "1" -- "0..1" NotificationPreference
Detection "1" -- "0..1" Incident : creates
UserReport "1" -- "0..1" Incident : creates

Incident --> User : verifiedBy
Incident --> User : escalatedBy
Incident --> User : enrouteBy
Incident --> User : resolvedBy
Incident --> User : dismissedBy

IAlertService <|.. AlertService
IS3Service <|.. S3Service
IGeminiService <|.. GeminiService
IPushNotificationService <|.. PushNotificationService
ITotpService <|.. TotpService
IEmailVerificationSender <|.. EmailService

TotpService --> TotpUsedCodeCache
ChallengeCleanupService --> AuthChallengeStore
AlertService --> IS3Service
PushNotificationService --> AppDbContext

AuthController --> AppDbContext
AuthController --> AuthChallengeStore
AuthController --> ITotpService
AuthController --> IEmailVerificationSender

PassengerController --|> BaseApiController
PassengerController --> AppDbContext
PassengerController --> IAlertService
PassengerController --> IS3Service
PassengerController --> IGeminiService
PassengerController --> IPushNotificationService
PassengerController --> AlertHub

AuxiliaryController --|> BaseApiController
AuxiliaryController --> AppDbContext
AuxiliaryController --> IAlertService
AuxiliaryController --> IPushNotificationService
AuxiliaryController --> AlertHub

OperatorController --|> BaseApiController
OperatorController --> AppDbContext
OperatorController --> IAlertService
OperatorController --> IS3Service
OperatorController --> IGeminiService
OperatorController --> IPushNotificationService
OperatorController --> AlertHub

NotificationController --|> BaseApiController
NotificationController --> AppDbContext

GeoController --> AppDbContext

note right of Incident
Either DetectionId or ReportId must be present
for each incident record.
end note

note bottom of PushNotificationService
Sends notifications to operator and auxiliary users
when incidents are created or updated.
end note

note bottom of AuthChallengeStore
In-memory OTP challenge store used by login,
signup, password setup, and password reset flows.
end note

@enduml
